golden/error/runtime_unop_unsupported.test
not "true"

# output:
 --> stdin:1:0
  |
1 | not "true"
  | ^~~
Error: This operator is not supported for this value.
